Removing 136925 from setup list.

--- a/Notebook_Tables.ipynb
+++ b/Notebook_Tables.ipynb
@@ -207,8 +207,8 @@
     "refdict = {'HD 145675 b': 'Wittenmyer07', 'HD 1326 b': 'Howard14',\n",
     "           'HD 1461 b': 'Rivera10', 'HD 1461 c': 'Diaz16',\n",
     "           'HD 155358 b': 'Robertson12', 'HD 155358 b': 'Stassun17',\n",
-    "           'HD 69830 b': 'Lovis06', 'HD 69830 b': 'Lovis06',\n",
-    "           'HD 69830 c': 'Lovis06', 'HD 102195 b': 'Ge06',\n",
+    "           'HD 69830 b': 'Lovis06', 'HD 69830 c': 'Lovis06',\n",
+    "           'HD 69830 d': 'Lovis06', 'HD 102195 b': 'Ge06',\n",
     "           'HD 104067 b': 'Segransan11', 'HD 10697 b': 'Butler06',\n",
     "           'HD 107148 b': 'Butler06', 'HD 108874 b': 'Butler03',\n",
     "           'HD 108874 c': 'Vogt05', 'HD 114729 b': 'Butler03',\n",
@@ -240,12 +240,13 @@
     "           'HD 190360 b': 'Naef03','HD 190360 c': 'Vogt05',\n",
     "           'HD 192263 b': 'Santos00','HD 192310 b': 'Howard11',\n",
     "           'HD 195019 b': 'Fischer99','HD 209458 b': 'Henry00',\n",
+    "           'HD 216520 b': 'Burt et al. in prep',\n",
     "           'HD 210277 b': 'Marcy99','HD 217014 b': 'Mayor95',\n",
     "           'HD 217107 b': 'Vogt05','HD 217107 c': 'Vogt05',\n",
-    "           'HD 218566 b': 'Meschiari11','HD 219134 b': 'Vogt15',\n",
-    "           'HD 28185 b': 'Santos01', 'HD 285968 b':'Forveille09',\n",
-    "           'HD 219134 c': 'Vogt15','HD 219134 d': 'Vogt15',\n",
-    "           'HD 219134 e': 'Vogt15','HD 219134 f': 'Vogt15',\n",
+    "           'HD 218566 b': 'Meschiari11', 'HD 28185 b': 'Santos01', \n",
+    "           'HD 285968 b':'Forveille09', 'HD 219134 b': 'Vogt15', \n",
+    "           'HD 219134 c': 'Vogt15', 'HD 219134 d': 'Vogt15', \n",
+    "           'HD 219134 e': 'Vogt15', 'HD 219134 f': 'Vogt15', \n",
     "           'HD 22049 b': 'Hatzes00','HD 222582 b': 'Vogt00',\n",
     "           'HD 24040 b': 'Boisse12', 'HD 31253 b':'Meschiari11',\n",
     "           'HD 32963 b': 'Rowan16', 'HD 90156 b':'Mordasini11',\n",
@@ -271,7 +272,9 @@
     "           'HD 87883 b': 'Fischer09','HD 92788 b': 'Fischer01',\n",
     "           'HD 92788 c': 'Rickman19','HD 9446 b': 'Hebrard10',\n",
     "           'HD 9446 c': 'Hebrard10','HD 95128 b': 'Naef04',\n",
-    "           'HD 95128 c': 'Wittenmyer07','HD 95735 b': 'Diaz19',\n",
+    "           'HD 95128 c': 'Wittenmyer07', 'HD 95128 d': 'Gregory10',\n",
+    "           'HD 95735 b': 'Diaz19', 'HD 97101 b': 'Dedrick et al. in prep',\n",
+    "           'HD 97101 c': 'Dedrick et al. in prep',\n",
     "           'HD 97658 b': 'Howard11','HD 9826 b': 'Butler97',\n",
     "           'HD 9826 c': 'Naef04','HD 9826 d': 'Naef04',\n",
     "           'HD 99109 b': 'Butler06', 'HD 147379a b': 'Reiners18',\n",
@@ -293,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,6 +514,11 @@
     "masses_candidate['mass_err_minus_r'] = round_sig_vec(np.array(masses_candidate['mass_med'] - masses_candidate['mass_minus']))\n",
     "masses_candidate['mass_err_av']      = round_sig_vec(0.5*(masses_candidate['mass_err_plus_r'] + masses_candidate['mass_err_minus_r']))\n",
     "masses_candidate['mass_med_r']       = round_to_ref_vec(np.array(masses_candidate['mass_med']), masses_candidate['mass_err_av'])\n",
+    "\n",
+    "masses_candidate['earth_err_plus_r']  = round_sig_vec(317.8*np.array(masses_candidate['mass_plus'] - masses_candidate['mass_med']))\n",
+    "masses_candidate['earth_err_minus_r'] = round_sig_vec(317.8*np.array(masses_candidate['mass_med'] - masses_candidate['mass_minus']))\n",
+    "masses_candidate['earth_err_av']      = round_sig_vec(0.5*(masses_candidate['earth_err_plus_r'] + masses_candidate['earth_err_minus_r']))\n",
+    "masses_candidate['earth_med_r']       = round_to_ref_vec(np.array(317.8*masses_candidate['mass_med']), masses_candidate['earth_err_av'])\n",
     "\n",
     "masses_candidate['axis_err_plus_r']  = round_sig_vec(np.array(masses_candidate['axis_plus'] - masses_candidate['axis_med']))\n",
     "masses_candidate['axis_err_minus_r'] = round_sig_vec(np.array(masses_candidate['axis_med'] - masses_candidate['axis_minus']))\n",
@@ -540,12 +548,12 @@
     "tex_writer = open('legacy_tables/tex_tables/candidate_table.tex', 'w')\n",
     "tex_writer.write(r'\\begin{longtable*}{llrrrrrr}')\n",
     "tex_writer.write('\\n')\n",
-    "tex_writer.write(r'\\caption{Newly Discovered Planets and Substellar Companions}' + r' \\\\')\n",
+    "tex_writer.write(r'\\caption{Newly Discovered and Revised Planets and Substellar Companions}' + r' \\\\')\n",
     "tex_writer.write('\\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\midrule' + ' \\n')\n",
     "tex_writer.write('\\n')\n",
-    "tex_writer.write(r'CPS Name & Lit. Name & \\msini\\ [\\mjup] & $a$ [AU] & $e$ & $P$ [d] & $t_c - 2450000$ [d] & $\\omega$ \\\\' + ' \\n')\n",
+    "tex_writer.write(r'CPS Name & Lit. Name & \\msini\\ [\\mjup] (\\mearth) & $a$ [AU] & $e$ & $P$ [d] & $t_c - 2450000$ [d] & $\\omega$ \\\\' + ' \\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "\n",
     "for index, row in masses_candidate.iterrows():\n",
@@ -573,6 +581,19 @@
     "        mass_str = mass_str[:-2]\n",
     "        mass_plus_str = mass_plus_str[:-2]\n",
     "        mass_minus_str = mass_minus_str[:-2]\n",
+    "        \n",
+    "    earth_str = str(row['earth_med_r'])\n",
+    "    earth_plus_str  = str(row['earth_err_plus_r'])\n",
+    "    earth_minus_str = str(row['earth_err_minus_r'])\n",
+    "    if len(earth_plus_str) < len(earth_minus_str) and (earth_plus_str[:2] == '0.' or earth_minus_str[:2] == '0.'):\n",
+    "        earth_plus_str += '0'\n",
+    "    elif len(earth_plus_str) > len(earth_minus_str) and (earth_plus_str[:2] == '0.' or earth_minus_str[:2] == '0.'):\n",
+    "        earth_minus_str += '0'    \n",
+    "    \n",
+    "    if earth_str[-2:] == '.0' and earth_plus_str[-2:] == '.0' and earth_minus_str[-2:] == '.0':\n",
+    "        earth_str = earth_str[:-2]\n",
+    "        earth_plus_str = earth_plus_str[:-2]\n",
+    "        earth_minus_str = earth_minus_str[:-2]\n",
     "        \n",
     "    axis_str = str(row['axis_med_r'])\n",
     "    axis_plus_str  = str(row['axis_err_plus_r'])\n",
@@ -634,15 +655,16 @@
     "    elif len(ecc_plus_str) > len(ecc_minus_str) and (ecc_plus_str[:2] == '0.' or ecc_minus_str[:2] == '0.'):\n",
     "        ecc_minus_str += '0' \n",
     "        \n",
-    "    massin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(mass_str, mass_plus_str, mass_minus_str) + r'$'    \n",
+    "    massin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(mass_str, mass_plus_str, mass_minus_str) + r'$'\n",
+    "    earthin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(earth_str, earth_plus_str, earth_minus_str) + r'$'    \n",
     "    axisin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(axis_str, axis_plus_str, axis_minus_str) + r'$'    \n",
     "    periin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(per_str, per_plus_str, per_minus_str) + r'$'\n",
     "    eccein = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(ecc_str, ecc_plus_str, ecc_minus_str) + r'$'\n",
     "    tcin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(tc_str, tc_plus_str, tc_minus_str) + r'$'\n",
     "    win = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(w_str, w_plus_str, w_minus_str) + r'$'\n",
     "    \n",
-    "    tex_writer.write('{0} & {1} & {2} & {3} & {4} & {5} & {6} & {7} \\\\\\\\ \\n'.format(\n",
-    "                     namein, namein, massin, axisin, eccein, periin, tcin, win))  \n",
+    "    tex_writer.write('{0} & {1} & {2} ({3}) & {4} & {5} & {6} & {7} & {8} \\\\\\\\ \\n'.format(\n",
+    "                     namein, namein, massin, earthin, axisin, eccein, periin, tcin, win))  \n",
     "    #tex_writer.write('{0} & {1} & {2} & {3} & {4} \\\\\\\\ \\n'.format(\n",
     "    #                 namein, massin, axisin, periin, eccein))\n",
     "    \n",
@@ -1607,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1618,7 +1640,7 @@
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1795,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1804,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
