--- a/legacy_tables/Stellar_legacy_selection.ipynb
+++ b/legacy_tables/Stellar_legacy_selection.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "legacy = pd.read_csv('../legacy.txt', names=['Name'])\n",
+    "legacy = pd.read_csv('legacy.txt', names=['Name'])\n",
     "legacy_names = list(legacy['Name'])\n",
     "legacy_names = [legacy_names[i].lower() for i in np.arange(len(legacy_names))]\n",
     "\n",
@@ -51,7 +51,10 @@
     "\n",
     "specmatch_emp = pd.read_csv('specmatch_results_emp.csv')\n",
     "specmatch_emp['name'] = specmatch_emp['name'].str.lower()\n",
-    "specmatch_e_names = specmatch_emp.name.unique()"
+    "specmatch_e_names = specmatch_emp.name.unique()\n",
+    "\n",
+    "mags = pd.read_csv('legacy_mag.csv').groupby('star', as_index=False).median().reset_index()\n",
+    "#mags['name'] = mags['star']"
    ]
   },
   {
@@ -295,7 +298,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['iso_parallax_err2', 'iso_logage_err1', 'iso_logg', 'iso_teff', 'iso_age_err1', 'kmag_err', 'fe', 'iso_radius_err1', 'teff_err', 'expnum', 'iso_teff_err2', 'iso_logage', 'iso_teff_err1', 'outdir', 'obs', 'iso_mass', 'teff', 'iso_mass_err1', 'iso_logage_err2', 'iso_parallax_err1', 'iso_mass_err2', 'iso_radius_err2', 'logg_err', 'name', 'iso_logg_err1', 'runnum', 'fe_err', 'id', 'iso_parallax', 'run', 'iso_fe', 'iso_logg_err2', 'outdir_mtime', 'iso_radius', 'logg', 'iso_age', 'iso_age_err2', 'iso_fe_err2', 'iso_fe_err1', 'obstime', 'Unnamed: 0', 'kmag']\n"
+      "['id', 'logg', 'iso_teff', 'outdir', 'iso_mass_err2', 'iso_logg_err2', 'obstime', 'iso_logage_err2', 'iso_logg_err1', 'iso_age', 'expnum', 'iso_fe', 'fe', 'kmag_err', 'iso_parallax_err2', 'run', 'obs', 'teff_err', 'outdir_mtime', 'iso_logg', 'iso_teff_err2', 'iso_mass_err1', 'runnum', 'logg_err', 'iso_radius', 'iso_age_err2', 'teff', 'name', 'Unnamed: 0', 'iso_logage_err1', 'iso_age_err1', 'iso_parallax_err1', 'iso_radius_err1', 'iso_fe_err1', 'iso_mass', 'iso_radius_err2', 'iso_fe_err2', 'iso_parallax', 'kmag', 'iso_teff_err1', 'iso_logage', 'fe_err']\n"
      ]
     }
    ],
@@ -642,7 +645,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Whole legacy sample: 720\n",
+      "Whole legacy sample: 719\n",
       "Floozies: []\n"
      ]
     }
@@ -1353,7 +1356,7 @@
     {
      "data": {
       "text/plain": [
-       "1844"
+       "1839"
       ]
      },
      "execution_count": 19,
@@ -1377,7 +1380,7 @@
     {
      "data": {
       "text/plain": [
-       "720"
+       "719"
       ]
      },
      "execution_count": 20,
@@ -1451,7 +1454,7 @@
        "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>269</th>\n",
+       "      <th>268</th>\n",
        "      <td>191408</td>\n",
        "      <td>0.639764</td>\n",
        "      <td>4956.0</td>\n",
@@ -1459,7 +1462,7 @@
        "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>272</th>\n",
+       "      <th>271</th>\n",
        "      <td>192263</td>\n",
        "      <td>0.820538</td>\n",
        "      <td>4938.5</td>\n",
@@ -1467,7 +1470,7 @@
        "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>283</th>\n",
+       "      <th>282</th>\n",
        "      <td>195019b</td>\n",
        "      <td>0.635248</td>\n",
        "      <td>4003.5</td>\n",
@@ -1475,7 +1478,7 @@
        "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>296</th>\n",
+       "      <th>295</th>\n",
        "      <td>200968</td>\n",
        "      <td>0.874188</td>\n",
        "      <td>5154.0</td>\n",
@@ -1483,7 +1486,7 @@
        "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>339</th>\n",
+       "      <th>338</th>\n",
        "      <td>217004</td>\n",
        "      <td>1.037938</td>\n",
        "      <td>5810.0</td>\n",
@@ -1491,7 +1494,7 @@
        "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>354</th>\n",
+       "      <th>353</th>\n",
        "      <td>219542</td>\n",
        "      <td>1.042849</td>\n",
        "      <td>5687.0</td>\n",
@@ -1499,7 +1502,7 @@
        "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>540</th>\n",
+       "      <th>539</th>\n",
        "      <td>75732b</td>\n",
        "      <td>0.647277</td>\n",
        "      <td>3244.0</td>\n",
@@ -1507,7 +1510,7 @@
        "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>622</th>\n",
+       "      <th>621</th>\n",
        "      <td>gl4063</td>\n",
        "      <td>0.638267</td>\n",
        "      <td>3310.0</td>\n",
@@ -1515,7 +1518,7 @@
        "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>659</th>\n",
+       "      <th>658</th>\n",
        "      <td>hip114914</td>\n",
        "      <td>1.105871</td>\n",
        "      <td>5800.0</td>\n",
@@ -1523,7 +1526,7 @@
        "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>716</th>\n",
+       "      <th>715</th>\n",
        "      <td>s101438b</td>\n",
        "      <td>0.932893</td>\n",
        "      <td>5482.0</td>\n",
@@ -1531,7 +1534,7 @@
        "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>717</th>\n",
+       "      <th>716</th>\n",
        "      <td>s11844</td>\n",
        "      <td>1.207109</td>\n",
        "      <td>6097.0</td>\n",
@@ -1539,7 +1542,7 @@
        "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>718</th>\n",
+       "      <th>717</th>\n",
        "      <td>s122446</td>\n",
        "      <td>0.542297</td>\n",
        "      <td>3756.0</td>\n",
@@ -1547,7 +1550,7 @@
        "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>719</th>\n",
+       "      <th>718</th>\n",
        "      <td>s130811</td>\n",
        "      <td>0.662882</td>\n",
        "      <td>4073.0</td>\n",
@@ -1563,19 +1566,19 @@
        "18      105113  1.054412    5925.0 -0.098582              -1.0\n",
        "65     120476a  0.741904    4595.0  0.020773              -1.0\n",
        "141    147379b  0.614948    3446.0 -0.870897              -1.0\n",
-       "269     191408  0.639764    4956.0 -0.506482              -1.0\n",
-       "272     192263  0.820538    4938.5  0.074141              -1.0\n",
-       "283    195019b  0.635248    4003.5 -0.246549              -1.0\n",
-       "296     200968  0.874188    5154.0  0.123388              -1.0\n",
-       "339     217004  1.037938    5810.0 -0.009236              -1.0\n",
-       "354     219542  1.042849    5687.0  0.189741              -1.0\n",
-       "540     75732b  0.647277    3244.0 -0.958133              -1.0\n",
-       "622     gl4063  0.638267    3310.0 -0.935648              -1.0\n",
-       "659  hip114914  1.105871    5800.0  0.169819              -1.0\n",
-       "716   s101438b  0.932893    5482.0  0.094676              -1.0\n",
-       "717     s11844  1.207109    6097.0  0.076902              -1.0\n",
-       "718    s122446  0.542297    3756.0 -0.764659              -1.0\n",
-       "719    s130811  0.662882    4073.0 -0.112733              -1.0"
+       "268     191408  0.639764    4956.0 -0.506482              -1.0\n",
+       "271     192263  0.820538    4938.5  0.074141              -1.0\n",
+       "282    195019b  0.635248    4003.5 -0.246549              -1.0\n",
+       "295     200968  0.874188    5154.0  0.123388              -1.0\n",
+       "338     217004  1.037938    5810.0 -0.009236              -1.0\n",
+       "353     219542  1.042849    5687.0  0.189741              -1.0\n",
+       "539     75732b  0.647277    3244.0 -0.958133              -1.0\n",
+       "621     gl4063  0.638267    3310.0 -0.935648              -1.0\n",
+       "658  hip114914  1.105871    5800.0  0.169819              -1.0\n",
+       "715   s101438b  0.932893    5482.0  0.094676              -1.0\n",
+       "716     s11844  1.207109    6097.0  0.076902              -1.0\n",
+       "717    s122446  0.542297    3756.0 -0.764659              -1.0\n",
+       "718    s130811  0.662882    4073.0 -0.112733              -1.0"
       ]
      },
      "execution_count": 21,
@@ -1597,11 +1600,11 @@
     {
      "data": {
       "text/plain": [
-       "298       201092\n",
-       "396        25329\n",
-       "633       gl528b\n",
-       "652    hip103269\n",
-       "664     hip16404\n",
+       "297       201092\n",
+       "395        25329\n",
+       "632       gl528b\n",
+       "651    hip103269\n",
+       "663     hip16404\n",
        "Name: name, dtype: object"
       ]
      },
@@ -1695,12 +1698,12 @@
        "3      0.021678\n",
        "4      0.059031\n",
        "         ...   \n",
-       "704    0.021148\n",
-       "711    0.028274\n",
-       "712    0.008407\n",
-       "716    0.109487\n",
-       "717    0.086889\n",
-       "Name: logg_err_c, Length: 537, dtype: float64"
+       "703    0.021148\n",
+       "710    0.028274\n",
+       "711    0.008407\n",
+       "715    0.109487\n",
+       "716    0.086889\n",
+       "Name: logg_err_c, Length: 536, dtype: float64"
       ]
      },
      "execution_count": 25,
@@ -1722,7 +1725,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "537 183\n"
+      "536 183\n"
      ]
     }
    ],
@@ -1807,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1816,7 +1819,7 @@
        "0.104346462381"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1827,52 +1830,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['level_0', 'index_x', 'name', 'teff', 'teff_err', 'logg', 'logg_err',\n",
+       "       'fe', 'fe_err', 'vsini', 'iso_mass', 'iso_mass_err1', 'iso_mass_err2',\n",
+       "       'iso_radius', 'iso_radius_err1', 'iso_radius_err2', 'iso_logage',\n",
+       "       'iso_logage_err1', 'iso_logage_err2', 'iso_age_err1', 'iso_age_err2',\n",
+       "       'iso_teff', 'iso_teff_err1', 'iso_teff_err2', 'iso_logg',\n",
+       "       'iso_logg_err1', 'iso_logg_err2', 'iso_fe', 'iso_fe_err1',\n",
+       "       'iso_fe_err2', 'iso_parallax', 'iso_parallax_err1', 'iso_parallax_err2',\n",
+       "       'teff_emp', 'teff_err_emp', 'logg_emp', 'logg_err_emp', 'fe_emp',\n",
+       "       'fe_err_emp', 'radius_emp', 'radius_err_emp', 'iso_mass_emp',\n",
+       "       'iso_mass_err1_emp', 'iso_mass_err2_emp', 'iso_radius_emp',\n",
+       "       'iso_radius_err1_emp', 'iso_radius_err2_emp', 'iso_logage_emp',\n",
+       "       'iso_logage_err1_emp', 'iso_logage_err2_emp', 'iso_age_emp',\n",
+       "       'iso_age_err1_emp', 'iso_age_err2_emp', 'iso_teff_emp',\n",
+       "       'iso_teff_err1_emp', 'iso_teff_err2_emp', 'iso_logg_emp',\n",
+       "       'iso_logg_err1_emp', 'iso_logg_err2_emp', 'iso_fe_emp',\n",
+       "       'iso_fe_err1_emp', 'iso_fe_err2_emp', 'iso_parallax_emp',\n",
+       "       'iso_parallax_err1_emp', 'iso_parallax_err2_emp', 'method', 'teff_c',\n",
+       "       'teff_err_c', 'fe_c', 'fe_err_c', 'logg_c', 'logg_err_c', 'radius_c',\n",
+       "       'radius_err_c', 'mass_c', 'mass_err_c', 'index_y', 'star', 'mv',\n",
+       "       'bvcolor'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "legacy_choice = legacy_choice.merge(mags, left_on='name', right_on='star')\n",
+    "legacy_choice.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>teff_c</th>\n",
-       "      <th>radius_c</th>\n",
-       "      <th>radius_err_c</th>\n",
-       "      <th>mass_c</th>\n",
-       "      <th>mass_err_c</th>\n",
-       "      <th>logg_c</th>\n",
-       "      <th>logg_err_c</th>\n",
-       "      <th>fe_c</th>\n",
-       "      <th>fe_err_c</th>\n",
-       "      <th>teff_c</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [name, teff_c, radius_c, radius_err_c, mass_c, mass_err_c, logg_c, logg_err_c, fe_c, fe_err_c, teff_c]\n",
-       "Index: []"
+       "16        105113\n",
+       "80        131156\n",
+       "138       153557\n",
+       "212        18445\n",
+       "225       188510\n",
+       "234       191408\n",
+       "237       192263\n",
+       "258       200968\n",
+       "292       217004\n",
+       "305       219542\n",
+       "341        25329\n",
+       "523    hip103269\n",
+       "526    hip114914\n",
+       "527     hip15904\n",
+       "530     hip57450\n",
+       "532     hip87062\n",
+       "534     s101438b\n",
+       "535       s11844\n",
+       "543      120476a\n",
+       "546       122303\n",
+       "552      147379b\n",
+       "571      195019b\n",
+       "583       217987\n",
+       "608       75732b\n",
+       "623        gl239\n",
+       "629        gl382\n",
+       "634       gl4063\n",
+       "643         gl49\n",
+       "713     hip86961\n",
+       "717      s122446\n",
+       "718      s130811\n",
+       "Name: name, dtype: object"
       ]
      },
      "execution_count": 30,
@@ -1881,9 +1917,7 @@
     }
    ],
    "source": [
-    "legacy_choice.query('radius_c == 0')[['name', 'teff_c', 'radius_c', 'radius_err_c', \n",
-    "                                    'mass_c', 'mass_err_c', 'logg_c', 'logg_err_c',\n",
-    "                                    'fe_c', 'fe_err_c', 'teff_c']]"
+    "legacy_choice.query('iso_parallax > 1 or iso_parallax < 0').name"
    ]
   },
   {
@@ -1897,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1931,9 +1965,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>616</th>\n",
+       "      <th>615</th>\n",
        "      <td>95735</td>\n",
-       "      <td>3513.0</td>\n",
+       "      <td>3719.946121</td>\n",
        "      <td>0.391846</td>\n",
        "      <td>0.008168</td>\n",
        "      <td>0.369083</td>\n",
@@ -1944,11 +1978,11 @@
        "</div>"
       ],
       "text/plain": [
-       "      name  teff_c    mass_c  mass_err_c  radius_c  radius_err_c\n",
-       "616  95735  3513.0  0.391846    0.008168  0.369083      0.006667"
+       "      name       teff_c    mass_c  mass_err_c  radius_c  radius_err_c\n",
+       "615  95735  3719.946121  0.391846    0.008168  0.369083      0.006667"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
