--- a/legacy_tables/tex_tables/planet_table_lit.tex
+++ b/legacy_tables/tex_tables/planet_table_lit.tex
@@ -90,6 +90,7 @@ HD 195019 b & HD 195019 b & $3.655^{+0.091}_{-0.090}$ & $0.1376^{+0.0017}_{-0.00
 HD 209458 b & HD 209458 b & $0.665^{+0.022}_{-0.022}$ & $0.04635^{+0.00068}_{-0.00070}$ & $0.0105^{+0.0110}_{-0.0074}$ & \cite{Henry00} & \\
 HD 210277 b & HD 210277 b & $1.236^{+0.032}_{-0.033}$ & $1.123^{+0.014}_{-0.014}$ & $0.472^{+0.0055}_{-0.0056}$ & \cite{Marcy99} & \\
 HD 213472 b & HD 213472 b & $3.48^{+1.10}_{-0.59}$ & $13.0^{+5.7}_{-2.6}$ & $0.53^{+0.120}_{-0.085}$ & This work & \\
+HD 216520 b & HIP 112527 b & $0.0326^{+0.0036}_{-0.0038}$ & $0.1954^{+0.0025}_{-0.0025}$ & $0.19^{+0.13}_{-0.12}$ & Burt et al. in prep & \\
 HD 217014 b & 51 Peg b & $0.464^{+0.014}_{-0.014}$ & $0.05236^{+0.00076}_{-0.00079}$ & $0.0042^{+0.0046}_{-0.0030}$ & \cite{Mayor95} & \\
 HD 217107 b & HD 217107 b & $1.385^{+0.039}_{-0.039}$ & $0.0739^{+0.0010}_{-0.0011}$ & $0.1279^{+0.0017}_{-0.0016}$ & \cite{Vogt05} & \\
 HD 217107 c & HD 217107 c & $4.31^{+0.13}_{-0.13}$ & $5.944^{+0.083}_{-0.086}$ & $0.3928^{+0.0069}_{-0.0067}$ & \cite{Vogt05} & \\
@@ -121,7 +122,7 @@ HD 40979 b & HD 40979 b & $3.8^{+0.16}_{-0.16}$ & $0.8669^{+0.0074}_{-0.0076}$ &
 HD 4203 b & HD 4203 b & $1.821^{+0.078}_{-0.077}$ & $1.177^{+0.021}_{-0.022}$ & $0.513^{+0.013}_{-0.014}$ & \cite{Vogt02} & \\
 HD 4203 c & HD 4203 c & $2.68^{+0.99}_{-0.24}$ & $7.8^{+5.40}_{-0.78}$ & $0.19^{+0.290}_{-0.089}$ & \cite{Kane14} & \\
 HD 4208 b & HD 4208 b & $0.771^{+0.036}_{-0.035}$ & $1.634^{+0.022}_{-0.022}$ & $0.059^{+0.044}_{-0.038}$ & \cite{Vogt02} & \\
-HD 42618 b & HD 42618 b & $0.187^{+0.021}_{-0.020}$ & $4.83^{+0.31}_{-0.23}$ & $0.368^{+0.088}_{-0.087}$ & \cite{Fulton16} & \\
+HD 42618 b & HD 42618 b & $0.0478^{+0.0057}_{-0.0056}$ & $0.5337^{+0.0089}_{-0.0090}$ & $0.27^{+0.13}_{-0.12}$ & \cite{Fulton16} & \\ 
 HD 45184 b & HD 45184 b & $0.0374^{+0.0040}_{-0.0038}$ & $0.0641^{+0.0010}_{-0.0011}$ & $0.18^{+0.1}_{-0.1}$ & \cite{Udry19} & \\
 HD 45184 c & HD 45184 c & $0.0345^{+0.0057}_{-0.0059}$ & $0.1095^{+0.0018}_{-0.0019}$ & $0.48^{+0.18}_{-0.24}$ & \cite{Udry19} & \\
 HD 45350 b & HD 45350 b & $1.821^{+0.075}_{-0.070}$ & $1.958^{+0.029}_{-0.030}$ & $0.794^{+0.012}_{-0.012}$ & \cite{Marcy05} & \\
@@ -137,6 +138,7 @@ HD 68988 b & HD 68988 b & $1.915^{+0.053}_{-0.054}$ & $0.07021^{+0.00096}_{-0.00
 HD 68988 c & HD 68988 c & $15.0^{+2.8}_{-1.5}$ & $13.2^{+5.3}_{-2.0}$ & $0.45^{+0.130}_{-0.081}$ & This work & \\
 HD 69830 b & HD 69830 b & $0.0323^{+0.0021}_{-0.0020}$ & $0.0794^{+0.0012}_{-0.0013}$ & $0.112^{+0.054}_{-0.060}$ & \cite{Lovis06} & \\
 HD 69830 c & HD 69830 c & $0.031^{+0.003}_{-0.003}$ & $0.1882^{+0.0029}_{-0.0030}$ & $0.114^{+0.096}_{-0.079}$ & \cite{Lovis06} & \\
+HD 69830 d & HD 69830 d & $0.0444^{+0.0054}_{-0.0056}$ & $0.645^{+0.01}_{-0.01}$ & $0.104^{+0.10}_{-0.073}$ & \cite{Lovis06} & \\
 HD 72659 b & HD 72659 b & $2.85^{+0.12}_{-0.12}$ & $4.652^{+0.067}_{-0.068}$ & $0.269^{+0.018}_{-0.026}$ & \cite{Butler03} & \\
 HD 74156 b & HD 74156 b & $7.65^{+0.27}_{-0.26}$ & $3.726^{+0.064}_{-0.065}$ & $0.3691^{+0.0055}_{-0.0055}$ & \cite{Naef04} & \\
 HD 74156 c & HD 74156 c & $1.745^{+0.061}_{-0.061}$ & $0.2844^{+0.0049}_{-0.0049}$ & $0.6536^{+0.0036}_{-0.0038}$ & \cite{Naef04} & \\
@@ -159,6 +161,7 @@ HD 92788 b & HD 92788 b & $3.52^{+0.1}_{-0.1}$ & $0.949^{+0.013}_{-0.013}$ & $0.
 HD 92788 c & HD 92788 c & $2.81^{+0.18}_{-0.17}$ & $8.26^{+0.37}_{-0.28}$ & $0.355^{+0.057}_{-0.052}$ & \cite{Rickman19} & \\
 HD 95128 b & 47 UMa b & $2.438^{+0.086}_{-0.085}$ & $2.059^{+0.031}_{-0.033}$ & $0.016^{+0.0076}_{-0.0080}$ & \cite{Naef04} & \\
 HD 95128 c & 47 UMa c & $0.497^{+0.032}_{-0.030}$ & $3.403^{+0.055}_{-0.056}$ & $0.179^{+0.090}_{-0.092}$ & \cite{Wittenmyer07} & \\
+HD 95128 d & 47 UMa d & $1.51^{+0.22}_{-0.18}$ & $13.8^{+4.8}_{-2.1}$ & $0.38^{+0.16}_{-0.15}$ & \cite{Gregory10} & \\
 HD 95735 b & GJ 411 b & $0.0568^{+0.0091}_{-0.0083}$ & $3.1^{+0.13}_{-0.11}$ & $0.14^{+0.160}_{-0.095}$ & \cite{Diaz19} & \\
 HD 95735 c & GJ 411 c & $0.00882^{+0.00092}_{-0.00098}$ & $0.07892^{+0.00055}_{-0.00054}$ & $0.095^{+0.099}_{-0.066}$ & This work & \\
 HD 97101 b & HD 97101 b & $0.184^{+0.010}_{-0.011}$ & $1.424^{+0.011}_{-0.011}$ & $0.185^{+0.069}_{-0.073}$ & This work & \\
