--- a/legacy_tables/tex_tables/candidate_table.tex
+++ b/legacy_tables/tex_tables/candidate_table.tex
@@ -1,25 +1,22 @@
 \begin{longtable*}{llrrrrrr}
-\caption{Newly Discovered Planets and Substellar Companions} \\
-\toprule
-\midrule
+\caption{Newly Discovered and Revised Planets and Substellar Companions} \\
+\toprule 
+\midrule 
 
-CPS Name & Lit. Name & \msini\ [\mjup] (\mearth) & $a$ [AU] & $e$ & $P$ [d] & $t_c - 2450000$ [d] & $\omega$ \\
-\toprule
-HD 107148 c & HD 107148 c & $0.0626^{+0.0097}_{-0.0098}$ ($19.9^{+3.1}_{-3.1}$) & $0.1406^{+0.0018}_{-0.0018}$ & $0.34^{+0.13}_{-0.16}$ & $18.3267^{+0.0022}_{-0.0024}$ & $5203.4^{+1.4}_{-1.3}$ & $-0.78^{+0.67}_{-0.42}$ \\
-HD 136925 b & HD 136925 b & $1.08^{+0.20}_{-0.19}$ & $4.68^{+0.390}_{-0.063}$ & $0.68^{+0.07}_{-0.31}$ & $3930^{+540}_{-29}$ & $8630^{+43}_{-30}$ & $-1.0^{+2.20}_{-0.35}$ \\
-HD 141004 b & HIP 77257 b & $0.0428^{+0.0047}_{-0.0045}$ ($13.6^{+1.5}_{-1.4}$) & $0.1238^{+0.002}_{-0.002}$ & $0.16^{+0.11}_{-0.10}$ & $15.5083^{+0.0016}_{-0.0018}$ & $6704.33^{+0.55}_{-0.49}$ & $0.34^{+0.55}_{-0.74}$ \\
-HD 145675 c & 14 Her c & $5.8^{+1.4}_{-1.0}$ & $16.4^{+9.3}_{-4.3}$ & $0.45^{+0.17}_{-0.15}$ & $25000^{+24000}_{-9200}$ & $4680^{+440}_{-310}$ & $-0.13^{+0.14}_{-0.18}$ \\
-HD 156668 b & HD 156668 b & $0.0991^{+0.0079}_{-0.0077}$ ($31.5^{+2.5}_{-2.5}$) & $1.57^{+0.017}_{-0.017}$ & $0.089^{+0.084}_{-0.061}$ & $811.3^{+5.2}_{-5.3}$ & $5890^{+25}_{-19}$ & $-0.19^{+0.92}_{-0.74}$ \\
-HD 164922 d & HD 164922 d & $0.0331^{+0.0031}_{-0.0031}$ ($10.52^{+0.99}_{-0.97}$) & $0.2292^{+0.0026}_{-0.0027}$ & $0.086^{+0.083}_{-0.060}$ & $41.763^{+0.012}_{-0.012}$ & $5256.6^{+1.2}_{-1.0}$ & $-0.3^{+1.30}_{-0.87}$ \\
-HD 164922 e & HD 164922 e & $0.0149^{+0.0021}_{-0.0021}$ ($4.73^{+0.66}_{-0.66}$) & $0.1023^{+0.0012}_{-0.0012}$ & $0.18^{+0.17}_{-0.12}$ & $12.4584^{+0.0019}_{-0.0023}$ & $5198.58^{+0.62}_{-0.77}$ & $-0.19^{+0.97}_{-0.80}$ \\
-HD 168009 b & HIP 89474 b & $0.03^{+0.0038}_{-0.0037}$ ($9.5^{+1.2}_{-1.2}$) & $0.1193^{+0.0017}_{-0.0018}$ & $0.121^{+0.110}_{-0.082}$ & $15.1479^{+0.0035}_{-0.0037}$ & $5201.56^{+0.82}_{-0.77}$ & $0.23^{+0.8}_{-1.1}$ \\
-HD 213472 b & HD 213472 b & $3.48^{+1.10}_{-0.59}$ & $13.0^{+5.7}_{-2.6}$ & $0.53^{+0.120}_{-0.085}$ & $16700^{+12000}_{-4800}$ & $9580^{+190}_{-160}$ & $0.65^{+0.24}_{-0.25}$ \\
-HD 24040 c & HD 24040 c & $0.201^{+0.027}_{-0.027}$ ($63.9^{+8.6}_{-8.6}$) & $1.3^{+0.021}_{-0.021}$ & $0.11^{+0.120}_{-0.079}$ & $515.4^{+2.2}_{-2.5}$ & $4984^{+19}_{-17}$ & $-0.3^{+1.30}_{-0.87}$ \\
-HD 26161 b & HD 26161 b & $13.5^{+8.5}_{-3.7}$ & $20.4^{+7.9}_{-4.9}$ & $0.82^{+0.061}_{-0.050}$ & $32000^{+21000}_{-10000}$ & $10540^{+450}_{-280}$ & $-0.07^{+0.13}_{-0.12}$ \\
-HD 3765 b & HIP 3206 b & $0.173^{+0.014}_{-0.013}$ ($54.8^{+4.3}_{-4.2}$) & $2.108^{+0.032}_{-0.033}$ & $0.298^{+0.078}_{-0.071}$ & $1211^{+15}_{-16}$ & $5607^{+52}_{-54}$ & $-1.1^{+2.60}_{-0.32}$ \\
-HD 66428 c & HD 66428 c & $27^{+22}_{-17}$ & $23.0^{+19.0}_{-7.6}$ & $0.32^{+0.23}_{-0.16}$ & $39000^{+56000}_{-18000}$ & $-4100^{+4600}_{-4500}$ & $0.5^{+0.65}_{-1.40}$ \\
-HD 68988 c & HD 68988 c & $15.0^{+2.8}_{-1.5}$ & $13.2^{+5.3}_{-2.0}$ & $0.45^{+0.130}_{-0.081}$ & $16100^{+11000}_{-3500}$ & $1660^{+110}_{-180}$ & $-0.13^{+0.037}_{-0.043}$ \\
-HD 86728 b & HIP 49081 b & $0.0289^{+0.0046}_{-0.0045}$ ($9.2^{+1.5}_{-1.4}$) & $0.1982^{+0.0028}_{-0.0029}$ & $0.13^{+0.160}_{-0.093}$ & $31.15^{+0.017}_{-0.017}$ & $7328.9^{+1.7}_{-1.7}$ & $-0.2^{+1.10}_{-0.83}$ \\
-HD 95735 c & GJ 411 c & $0.0568^{+0.0091}_{-0.0083}$ ($18.0^{+2.9}_{-2.6}$) & $3.1^{+0.13}_{-0.11}$ & $0.14^{+0.160}_{-0.095}$ & $3190^{+200}_{-170}$ & $7440^{+150}_{-150}$ & $0.1^{+1.1}_{-1.3}$ \\
-\bottomrule
-\end{longtable*}
+CPS Name & Lit. Name & \msini\ [\mjup] (\mearth) & $a$ [AU] & $e$ & $P$ [d] & $t_c - 2450000$ [d] & $\omega$ \\ 
+\toprule 
+HD 107148 c & HD 107148 c & $0.0626^{+0.0097}_{-0.0098}$ ($19.9^{+3.1}_{-3.1}$) & $0.1407^{+0.0018}_{-0.0019}$ & $0.34^{+0.13}_{-0.16}$ & $18.3267^{+0.0022}_{-0.0024}$ & $5203.4^{+1.4}_{-1.3}$ & $-0.78^{+0.67}_{-0.42}$ \\ 
+HD 136925 b & HD 136925 b & $0.84^{+0.078}_{-0.074}$ ($267^{+25}_{-24}$) & $5.13^{+0.12}_{-0.11}$ & $0.103^{+0.094}_{-0.070}$ & $4540^{+160}_{-140}$ & $-310^{+280}_{-330}$ & $0.42^{+0.69}_{-1.30}$ \\ 
+HD 141004 b & HD 141004 b & $0.0429^{+0.0046}_{-0.0046}$ ($13.6^{+1.5}_{-1.4}$) & $0.1238^{+0.002}_{-0.002}$ & $0.16^{+0.11}_{-0.10}$ & $15.5083^{+0.0016}_{-0.0018}$ & $6704.33^{+0.55}_{-0.49}$ & $0.34^{+0.55}_{-0.74}$ \\ 
+HD 145675 c & HD 145675 c & $5.8^{+1.4}_{-1.0}$ ($1860^{+430}_{-330}$) & $16.4^{+9.3}_{-4.3}$ & $0.45^{+0.17}_{-0.15}$ & $25000^{+24000}_{-9200}$ & $4680^{+440}_{-310}$ & $-0.13^{+0.14}_{-0.18}$ \\ 
+HD 156668 b & HD 156668 b & $0.0991^{+0.0079}_{-0.0077}$ ($31.5^{+2.5}_{-2.4}$) & $1.57^{+0.017}_{-0.017}$ & $0.089^{+0.084}_{-0.061}$ & $811.3^{+5.2}_{-5.3}$ & $5890^{+25}_{-19}$ & $-0.19^{+0.92}_{-0.74}$ \\ 
+HD 164922 d & HD 164922 d & $0.0331^{+0.0031}_{-0.0031}$ ($10.53^{+0.98}_{-0.98}$) & $0.2292^{+0.0026}_{-0.0027}$ & $0.086^{+0.083}_{-0.060}$ & $41.763^{+0.012}_{-0.012}$ & $5256.6^{+1.2}_{-1.0}$ & $-0.3^{+1.30}_{-0.87}$ \\ 
+HD 213472 b & HD 213472 b & $3.48^{+1.10}_{-0.59}$ ($1110^{+340}_{-190}$) & $13.0^{+5.7}_{-2.6}$ & $0.53^{+0.120}_{-0.085}$ & $16700^{+12000}_{-4800}$ & $9580^{+190}_{-160}$ & $0.65^{+0.24}_{-0.25}$ \\ 
+HD 24040 c & HD 24040 c & $0.201^{+0.027}_{-0.027}$ ($63.9^{+8.7}_{-8.6}$) & $1.3^{+0.021}_{-0.022}$ & $0.11^{+0.120}_{-0.079}$ & $515.4^{+2.2}_{-2.5}$ & $4984^{+19}_{-17}$ & $-0.3^{+1.30}_{-0.87}$ \\ 
+HD 26161 b & HD 26161 b & $13.5^{+8.5}_{-3.7}$ ($4300^{+2700}_{-1200}$) & $20.4^{+7.9}_{-4.9}$ & $0.82^{+0.061}_{-0.050}$ & $32000^{+21000}_{-10000}$ & $10540^{+450}_{-280}$ & $-0.07^{+0.13}_{-0.12}$ \\ 
+HD 3765 b & HD 3765 b & $0.173^{+0.014}_{-0.013}$ ($54.8^{+4.3}_{-4.2}$) & $2.108^{+0.032}_{-0.033}$ & $0.298^{+0.078}_{-0.071}$ & $1211^{+15}_{-16}$ & $5607^{+52}_{-54}$ & $-1.1^{+2.60}_{-0.32}$ \\ 
+HD 66428 c & HD 66428 c & $27^{+22}_{-17}$ ($8600^{+6900}_{-5500}$) & $23.0^{+19.0}_{-7.6}$ & $0.32^{+0.23}_{-0.16}$ & $39000^{+56000}_{-18000}$ & $-4100^{+4600}_{-4500}$ & $0.5^{+0.65}_{-1.40}$ \\ 
+HD 68988 c & HD 68988 c & $15.0^{+2.8}_{-1.5}$ ($4760^{+900}_{-480}$) & $13.2^{+5.3}_{-2.0}$ & $0.45^{+0.130}_{-0.081}$ & $16100^{+11000}_{-3500}$ & $1660^{+110}_{-180}$ & $-0.13^{+0.037}_{-0.043}$ \\ 
+HD 95735 b & HD 95735 b & $0.0568^{+0.0091}_{-0.0083}$ ($18.0^{+2.9}_{-2.6}$) & $3.1^{+0.13}_{-0.11}$ & $0.14^{+0.160}_{-0.095}$ & $3190^{+200}_{-170}$ & $7440^{+150}_{-150}$ & $0.1^{+1.1}_{-1.3}$ \\ 
+\bottomrule 
+\end{longtable*} 
